[package]
name = "mqttui"
version = "1.0.0"
edition = "2024"
authors = ["thore.goll@arculus.de"]
repository = "https://git.arculus.de/gollth/mqttui"
description = "Explore & search through your MQTT traffic"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.0", features = ["event-stream"] }
futures = "0.3.28"
petname = "2.0.2"
ratatui = { version = "0.29.0", features = ["serde"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
enum-as-inner = "0.6.1"
itertools = "0.14.0"
clipboard = "0.5.0"
fuzzy-matcher = "0.3.7"
derivative = "2.2.0"
clap = { version = "4.5.35", features = ["derive"] }
url = "2.5.4"
xdg = "2.5.2"
toml = "0.8.20"
humantime-serde = "1.1.1"
syntect = { version = "5.2.0", default-features = false }
syntect-tui = "3.0.5"
jaq-core = "2.1.1"
jaq-json = { version = "1.1.1", features = ["serde_json"] }
jaq-std = "2.1.0"
codesnake = "0.2.1"
rumqttc = "0.24.0"
